more advanced model

--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -17,8 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "36acb2d6",
+   "execution_count": 23,
+   "id": "b37be06a",
    "metadata": {},
    "outputs": [
     {
@@ -31,22 +31,38 @@
       "\tNumber of channels:     1\n",
       "\tTraining data shape:    (10000, 28, 28, 1)\n",
       "\tValidation data shape:  (6000, 28, 28, 1)\n",
-      "\tTest data shape:        (10000, 28, 28, 1)\n"
+      "\tTest data shape:        (10000, 28, 28, 1)\n",
+      "x_train: (10000, 28, 28, 1) -1.0 1.0\n",
+      "y_train: (10000, 28, 28, 1) -1.0 1.0\n"
      ]
     }
    ],
    "source": [
-    "# 1. Generate data for training and validation\n",
+    "import numpy as np\n",
     "from data_generator import DataGenerator\n",
     "\n",
     "dg = DataGenerator(verbose=True)\n",
-    "dg.generate(dataset='mnist', N_train=10000, N_valid=0.1)"
+    "dg.generate(dataset=\"mnist\", N_train=10000, N_valid=0.1)\n",
+    "\n",
+    "# Clean targets (image-to-image target)\n",
+    "y_train = dg.x_train\n",
+    "y_valid = dg.x_valid\n",
+    "\n",
+    "# Create noisy inputs\n",
+    "rng = np.random.RandomState(0)\n",
+    "sigma = 0.25  # noise strength; try 0.15–0.35\n",
+    "\n",
+    "x_train = np.clip(y_train + sigma * rng.randn(*y_train.shape).astype(np.float32), -1.0, 1.0)\n",
+    "x_valid = np.clip(y_valid + sigma * rng.randn(*y_valid.shape).astype(np.float32), -1.0, 1.0)\n",
+    "\n",
+    "print(\"x_train:\", x_train.shape, x_train.min(), x_train.max())\n",
+    "print(\"y_train:\", y_train.shape, y_train.min(), y_train.max())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "b37be06a",
+   "execution_count": 24,
+   "id": "ba523488",
    "metadata": {},
    "outputs": [
     {
@@ -56,35 +72,60 @@
       "CNN model set up with layers:\n",
       "  Layer 0: conv, W shape: (3, 3, 1, 32)\n",
       "  Layer 1: conv, W shape: (3, 3, 32, 64)\n",
-      "  Layer 2: conv_out, W shape: (3, 3, 64, 1)\n",
-      "x_train batch: (8, 28, 28, 1)\n",
-      "y_pred: (8, 28, 28, 1)\n",
-      "y_train batch: (8, 28, 28, 1)\n",
-      "{'loss': 5.708755016326904}\n"
+      "  Layer 2: conv, W shape: (3, 3, 64, 64)\n",
+      "  Layer 3: conv, W shape: (3, 3, 64, 32)\n",
+      "  Layer 4: conv_out, W shape: (3, 3, 32, 1)\n"
      ]
     }
    ],
    "source": [
-    "import importlib, cnn\n",
+    "import importlib\n",
+    "import cnn\n",
     "importlib.reload(cnn)\n",
-    "from cnn import CNN, init_simple_image_to_image_cnn\n",
     "\n",
-    "input_shape = x_train.shape[1:]  # (28, 28, 1)\n",
-    "W_list, b_list, lname = init_simple_image_to_image_cnn(\n",
+    "from cnn import CNN, init_deep_image_to_image_cnn\n",
+    "\n",
+    "input_shape = x_train.shape[1:]  # (28, 28, 1) for MNIST\n",
+    "W_list, b_list, lname = init_deep_image_to_image_cnn(\n",
     "    input_shape=input_shape,\n",
-    "    num_filters=(32, 64)   # two conv layers + final conv_out\n",
+    "    num_filters=(32, 64, 64, 32)\n",
     ")\n",
     "\n",
     "model = CNN(dataset=dg, verbose=True)\n",
-    "model.setup_model(W_list, b_list, lname, activation=\"relu\")\n",
+    "model.setup_model(W_list, b_list, lname, activation=\"relu\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e1af5f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history = model.fit(\n",
+    "    x_train, y_train,\n",
+    "    epochs=5,          \n",
+    "    batch_size=16,\n",
+    "    lr=1e-3,\n",
+    "    clip_grad=1.0,      \n",
+    "    x_val=x_valid,\n",
+    "    y_val=y_valid,\n",
+    "    verbose=True\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9536d3f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats = model.evaluate(x_valid[:128], y_valid[:128], metric=\"mse\")\n",
+    "print(\"Valid MSE:\", stats)\n",
     "\n",
-    "y_pred = model.feedforward(x_train[:8])\n",
-    "print(\"x_train batch:\", x_train[:8].shape)\n",
-    "print(\"y_pred:\", y_pred.shape)\n",
-    "print(\"y_train batch:\", y_train[:8].shape)\n",
-    "\n",
-    "stats = model.evaluate(x_train[:8], y_train[:8], metric=\"mse\")\n",
-    "print(stats)\n"
+    "stats_psnr = model.evaluate(x_valid[:128], y_valid[:128], metric=\"psnr\", max_val=1.0)\n",
+    "print(\"Valid PSNR:\", stats_psnr)\n"
    ]
   }
  ],
