--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "id": "b37be06a",
    "metadata": {},
    "outputs": [
@@ -29,11 +29,11 @@
       "\tDataset type:           mnist\n",
       "\tNumber of classes:      10\n",
       "\tNumber of channels:     1\n",
-      "\tTraining data shape:    (10000, 28, 28, 1)\n",
+      "\tTraining data shape:    (5000, 28, 28, 1)\n",
       "\tValidation data shape:  (6000, 28, 28, 1)\n",
       "\tTest data shape:        (10000, 28, 28, 1)\n",
-      "x_train: (10000, 28, 28, 1) -1.0 1.0\n",
-      "y_train: (10000, 28, 28, 1) -1.0 1.0\n"
+      "x_train: (5000, 28, 28, 1) -1.0 1.0\n",
+      "y_train: (5000, 28, 28, 1) -1.0 1.0\n"
      ]
     }
    ],
@@ -42,7 +42,7 @@
     "from data_generator import DataGenerator\n",
     "\n",
     "dg = DataGenerator(verbose=True)\n",
-    "dg.generate(dataset=\"mnist\", N_train=10000, N_valid=0.1)\n",
+    "dg.generate(dataset=\"mnist\", N_train=5000, N_valid=0.1)\n",
     "\n",
     "# Clean targets (image-to-image target)\n",
     "y_train = dg.x_train\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "id": "ba523488",
    "metadata": {},
    "outputs": [
@@ -70,11 +70,9 @@
      "output_type": "stream",
      "text": [
       "CNN model set up with layers:\n",
-      "  Layer 0: conv, W shape: (3, 3, 1, 32)\n",
-      "  Layer 1: conv, W shape: (3, 3, 32, 64)\n",
-      "  Layer 2: conv, W shape: (3, 3, 64, 64)\n",
-      "  Layer 3: conv, W shape: (3, 3, 64, 32)\n",
-      "  Layer 4: conv_out, W shape: (3, 3, 32, 1)\n"
+      "  Layer 0: conv, W shape: (3, 3, 1, 8)\n",
+      "  Layer 1: conv, W shape: (3, 3, 8, 8)\n",
+      "  Layer 2: conv_out, W shape: (3, 3, 8, 1)\n"
      ]
     }
    ],
@@ -87,8 +85,8 @@
     "\n",
     "input_shape = x_train.shape[1:]  # (28, 28, 1) for MNIST\n",
     "W_list, b_list, lname = init_deep_image_to_image_cnn(\n",
-    "    input_shape=input_shape,\n",
-    "    num_filters=(32, 64, 64, 32)\n",
+    "    input_shape=x_train.shape[1:],\n",
+    "    num_filters=(8, 8),          # two conv layers\n",
     ")\n",
     "\n",
     "model = CNN(dataset=dg, verbose=True)\n",
@@ -100,18 +98,18 @@
    "execution_count": null,
    "id": "5e1af5f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5 [=========>...............]  39%  batch_loss=8.6994e-01  avg_loss=1.0110e+00"
+     ]
+    }
+   ],
    "source": [
-    "history = model.fit(\n",
-    "    x_train, y_train,\n",
-    "    epochs=5,          \n",
-    "    batch_size=16,\n",
-    "    lr=1e-3,\n",
-    "    clip_grad=1.0,      \n",
-    "    x_val=x_valid,\n",
-    "    y_val=y_valid,\n",
-    "    verbose=True\n",
-    ")\n"
+    "history = model.fit(x_train, y_train, epochs=5, batch_size=64, lr=1e-3)\n",
+    "\n"
    ]
   },
   {
