--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "5e1af5f9",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5 [=========>...............]  39%  batch_loss=8.6994e-01  avg_loss=1.0110e+00"
+      "Epoch 1/5 [=========================>] 100%  batch_loss=3.8530e-01  avg_loss=5.3759e-01\n",
+      "           train_loss=5.3759e-01\n",
+      "Epoch 2/5 [=========================>] 100%  batch_loss=2.8012e-01  avg_loss=3.1413e-01\n",
+      "           train_loss=3.1413e-01\n",
+      "Epoch 3/5 [=========================>] 100%  batch_loss=2.0702e-01  avg_loss=2.4848e-01\n",
+      "           train_loss=2.4848e-01\n",
+      "Epoch 4/5 [=========================>] 100%  batch_loss=2.0755e-01  avg_loss=2.0880e-01\n",
+      "           train_loss=2.0880e-01\n",
+      "Epoch 5/5 [=========================>] 100%  batch_loss=1.6599e-01  avg_loss=1.8190e-01\n",
+      "           train_loss=1.8190e-01\n"
      ]
     }
    ],
@@ -114,10 +123,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "9536d3f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid MSE: {'loss': 0.17139868438243866}\n",
+      "Valid PSNR: {'loss': 0.17139868438243866, 'psnr': 7.659924906080481}\n"
+     ]
+    }
+   ],
    "source": [
     "stats = model.evaluate(x_valid[:128], y_valid[:128], metric=\"mse\")\n",
     "print(\"Valid MSE:\", stats)\n",
@@ -125,6 +143,14 @@
     "stats_psnr = model.evaluate(x_valid[:128], y_valid[:128], metric=\"psnr\", max_val=1.0)\n",
     "print(\"Valid PSNR:\", stats_psnr)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5426358",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
